Various docstrings and tests
Signed-off-by: Carlson Büth <commit@cbueth.de>

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,3 +1,16 @@
+@article{Bessler01061984,
+  title = {A Note on Tests of {{Granger}} Causality},
+  author = {Bessler, D. A. and Kling, J. L.},
+  year = {1984},
+  journal = {Applied Economics},
+  volume = {16},
+  number = {3},
+  eprint = {https://doi.org/10.1080/00036848400000041},
+  pages = {335--342},
+  publisher = {Routledge},
+  doi = {10.1080/00036848400000041}
+}
+
 @book{dieboldElementsForecasting1997,
   title = {Elements of {{Forecasting}}},
   author = {Diebold, Francis X.},
