docs: expand Network Analysis Guide and integrate igraph documentation
- Added comprehensive examples and explanations to the Network Analysis guide.
- Enhanced sections on statistical pruning, network metrics, and visualization techniques.
- Integrated `python-igraph` external documentation into the `conf.py` mapping.
- Improved test coverage with expanded unit tests for reciprocity and transitivity.

Signed-off-by: Carlson Büth <commit@cbueth.de>

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -82,3 +82,35 @@
   abstract = {We propose Granger causality mapping (GCM) as an approach to explore directed influences between neuronal populations (effective connectivity) in fMRI data. The method does not rely on a priori specification of a model that contains pre-selected regions and connections between them. This distinguishes it from other fMRI effective connectivity approaches that aim at testing or contrasting specific hypotheses about neuronal interactions. Instead, GCM relies on the concept of Granger causality to define the existence and direction of influence from information in the data. Temporal precedence information is exploited to compute Granger causality maps that identify voxels that are sources or targets of directed influence for any selected region-of-interest. We investigated the method by simulations and by application to fMRI data of a complex visuomotor task. The presented exploratory approach of mapping influences between a region of interest and the rest of the brain can form a useful complement to existing models of effective connectivity.},
   keywords = {Autoregressive models,Effective connectivity,fMRI,Granger causality}
 }
+
+@article{brandesVariantsShortestpathBetweenness2008,
+  title = {On Variants of Shortest-Path Betweenness Centrality and Their Generic Computation},
+  author = {Brandes, Ulrik},
+  year = {2008},
+  month = may,
+  journal = {Social Networks},
+  volume = {30},
+  number = {2},
+  pages = {136--145},
+  issn = {0378-8733},
+  doi = {10.1016/j.socnet.2007.11.001},
+  urldate = {2022-03-23},
+  abstract = {Betweenness centrality based on shortest paths is a standard measure of control utilized in numerous studies and implemented in all relevant software tools for network analysis. In this paper, a number of variants are reviewed, placed into context, and shown to be computable with simple variants of the algorithm commonly used for the standard case.},
+  langid = {english},
+  keywords = {Algorithms,Betweenness centrality,Load centrality,Valued networks}
+}
+
+@article{latoraEfficientBehaviorSmallWorld2001,
+  title = {Efficient {{Behavior}} of {{Small-World Networks}}},
+  author = {Latora, Vito and Marchiori, Massimo},
+  year = {2001},
+  month = oct,
+  journal = {Physical Review Letters},
+  volume = {87},
+  number = {19},
+  pages = {198701},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.87.198701},
+  urldate = {2023-02-13},
+  abstract = {We introduce the concept of efficiency of a network as a measure of how efficiently it exchanges information. By using this simple measure, small-world networks are seen as systems that are both globally and locally efficient. This gives a clear physical meaning to the concept of ``small world,'' and also a precise quantitative analysis of both weighted and unweighted networks. We study neural networks and man-made communication and transportation systems and we show that the underlying general principle of their construction is in fact a small-world principle of high efficiency.}
+}
