--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -158,21 +158,24 @@
     abstract = {An information theoretic measure is derived that quantifies the statistical coherence between systems evolving in time. The standard time delayed mutual information fails to distinguish information that is actually exchanged from shared information due to common history and input signals. In our new approach, these influences are excluded by appropriate conditioning of transition probabilities. The resulting transfer entropy is able to distinguish effectively driving and responding elements and to detect asymmetry in the interaction of subsystems.}
 }
 
-@misc{buthInfomeasureComprehensivePython2025,
-    title = {Infomeasure: {{A Comprehensive Python Package}} for {{Information Theory Measures}} and {{Estimators}}},
+@article{buthInfomeasureComprehensivePython2025,
+    title = {Infomeasure: A Comprehensive {{Python}} Package for Information Theory Measures and Estimators},
     shorttitle = {Infomeasure},
     author = {B{\"u}th, Carlson Moses and Acharya, Kishor and Zanin, Massimiliano},
     year = {2025},
-    month = may,
-    number = {arXiv:2505.14696},
-    eprint = {2505.14696},
-    primaryclass = {physics},
-    publisher = {arXiv},
-    doi = {10.48550/arXiv.2505.14696},
-    urldate = {2025-07-22},
-    abstract = {Information theory, i.e. the mathematical analysis of information and of its processing, has become a tenet of modern science; yet, its use in real-world studies is usually hindered by its computational complexity, the lack of coherent software frameworks, and, as a consequence, low reproducibility. We here introduce infomeasure, an open-source Python package designed to provide robust tools for calculating a wide variety of information-theoretic measures, including entropies, mutual information, transfer entropy and divergences. It is designed for both discrete and continuous variables; implements state-of-the-art estimation techniques; and allows the calculation of local measure values, \$p\$-values and \$t\$-scores. By unifying these approaches under one consistent framework, infomeasure aims to mitigate common pitfalls, ensure reproducibility, and simplify the practical implementation of information-theoretic analyses. In this contribution, we explore the motivation and features of infomeasure; its validation, using known analytical solutions; and exemplify its utility in a case study involving the analysis of human brain time series.},
-    archiveprefix = {arXiv},
-    keywords = {Computer Science - Information Theory,Mathematics - Information Theory,Physics - Computational Physics,Physics - Data Analysis Statistics and Probability,Physics - Physics and Society}
+    month = aug,
+    journal = {Scientific Reports},
+    volume = {15},
+    number = {1},
+    pages = {29323},
+    publisher = {Nature Publishing Group},
+    issn = {2045-2322},
+    doi = {10.1038/s41598-025-14053-5},
+    urldate = {2025-08-11},
+    abstract = {Information theory, i.e. the mathematical analysis of information and of its processing, has become a tenet of modern science; yet, its use in real-world studies is usually hindered by its computational complexity, the lack of coherent software frameworks, and, as a consequence, low reproducibility. We here introduce infomeasure, an open-source Python package designed to provide robust tools for calculating a wide variety of information-theoretic measures, including entropies, mutual information, transfer entropy and divergences. It is designed for both discrete and continuous variables; implements state-of-the-art estimation techniques; and allows the calculation of local measure values, p-values and t-scores. By unifying these approaches under one consistent framework, infomeasure aims to mitigate common pitfalls, ensure reproducibility, and simplify the practical implementation of information-theoretic analyses. In this contribution, we explore the motivation and features of infomeasure; its validation, using known analytical solutions; and exemplify its utility in a case study involving the analysis of human brain time series.},
+    copyright = {2025 The Author(s)},
+    langid = {english},
+    keywords = {Information theory and computation,Neurological disorders,Nonlinear phenomena,Statistical physics}
 }
 
 @article{olivaresEvaluatingMethodsDetrending2025,
